Implement Block Item type